Add standardkit, mdi and basic layout

--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/@mdi/font/css/materialdesignicons.min.css",
               "src/styles.scss"
             ],
             "scripts": []
