--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "@mdi/font": "^5.9.55",
+    "@standardkit/angular-components": "0.0.7",
+    "@standardkit/styles": "0.0.7",
+    "@standardkit/themes": "0.0.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
